--- a/templates/index.html
+++ b/templates/index.html
@@ -2,102 +2,120 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bike</title>
+    <title>Defaulter or Not Defaulter</title>
     <style>
-        body ,html{
+        body {
           background-image:url({{url_for('static',filename='1.jpg')}});
-          background-size: 100% 100%; background-repeat: no-repeat; height: 100%;
+          background-size: 100% 100%; 
         }
-        table, th, td { color: yellowgreen; background-color: darkcyan;
-                border:1px solid pink;
+        table, th, td { color: whitesmoke; background-color: darkcyan;
+                border:1px solid whitesmoke;
             }
     </style>
     
 </head>
-    <body>
-        <h1 style="color: whitesmoke; background-color: darkcyan; text-align: center;">Bike Demand Prediction</h1>
-        {% if result %}
-            <h1 style="text-align: center; color: gold; box-sizing: content-box; ">{{ result }}</h1>
-        {% endif %}
-        <form method="post" action="/predict">
-            <table style="width:100%;" >
-                <tr>
-                    <th class="header-label">Hour</th>
-                    <th class="header-label">Temperature(°C)</th>
-                    <th class="header-label">Humidity(%)</th>
-                    <th class="header-label">Wind speed (m/s)</th>
-                    <th class="header-label">Visibility (10m)</th>
-                    
-                  </tr>
-                  <tr>
-                    <th><input type="number" value= "12" name="hour"></th>
-                    <th><input type="number" value="-5.2" name="temp"></th>
-                    <th><input type="number" value="37" name="humi"></th>
-                    <th><input type="number" value="2.2" name="wind"></th>
-                    <th><input type="number" value="2000" name="visi"></th>
-                </tr>
-                <br><br>
-                <tr>
-                    <th class="header-label">Dew point temperature(°C)</th>
-                    <th class="header-label">Solar Radiation (MJ/m2)</th>
-                    <th class="header-label">Rainfall(mm)</th>
-                    <th class="header-label">Snowfall (cm)</th>
-                    <th class="header-label">Seasons</th>
-                </tr>
-                <tr>
-                    <th><input type="number" value= "-17.6" name="dew"></th>
-                    <th><input type="number" value="0.0" name="solar"></th>
-                    <th><input type="number" value="0.0" name="rain"></th>
-                    <th><input type="number" value="0.0" name="snow"></th>
-                    <th><select name="season" id="season">
-                        <option value=Winter id="season">Winter</option>
-                        <option value=Summer id="season">Summer</option>
-                        <option value=Spring id="season">Spring</option>
-                        <option value=Autumn id="season">Autumn</option>
-                    </select></th>
-                </tr>
-                <br><br>
-                <tr>
-                    <th class="header-label">Holiday</th>
-                    <th class="header-label">Functioning Day</th>
-                    <th class="header-label">Month</th>
-                    <th class="header-label">year</th>
-                    <th class="header-label">Week</th>
-                </tr>
-                <tr>
-                    <th><select name="holi" id="holi">
-                        <option value="No Holiday" id="holi">No Holiday</option>
-                        <option value="Holiday" id="holi">Holiday</option>
-                    </select></th>
-                    <th><select name="func" id="func">
-                        <option value="Yes" id="func">Yes</option>
-                        <option value="No" id="func">No</option>
-                    </select></th>
-                    <th><select name="month" id="month">
-                        <option value="January" id="month">January</option>
-                        <option value="February" id="month">February</option>
-                        <option value="March" id="month">March</option>
-                        <option value="April" id="month">April</option>
-                        <option value="May" id="month">May</option>
-                        <option value="June" id="month">June</option>
-                        <option value="July" id="month">July</option>
-                        <option value="August" id="month">August</option>
-                        <option value="September" id="month">September</option>
-                        <option value="October" id="month">October</option>
-                        <option value="November" id="month">November</option>
-                        <option value="December" id="month">December</option>
-                    </select></th>
-                    <th><input type="number" value="2021" name="year"></th>
-                    <th><select name="week" id="week">
-                        <option value="weekend" id="week">Weekend</option>
-                        <option value="weekday" id="week">Weekday</option>
-                    </select></th>
+<body>
+    
+    
+    <h1 style="color:whitesmoke ; text-align:center; background-color:darkcyan"> Credit Card Defaulter Prediction</h1>
+    {% if result %}
+        <h1 style="color: red;">{{ result }}</h1>  
+    {% endif %}
+    <form method="post" action="/predict">
+        <label><h2 >Personal Details</h2></label><br>
+        <table style="width:100% ;">
+            <tr>
+                <th class="header-label">Credit Card Limit</th>
+                <th class="header-label">Gender</th>
+                <th class="header-label">Education</th>
+                <th class="header-label">Marital Status</th>
+                <th class="header-label">Age</th>
+                
+              </tr>
+              <tr>
+                <th><input type="number" value= "100000" name="Limit"></th>
+                <th><select name="Gender" id="Gender">
+                    <option value=2>Male</option>
+                    <option value=1>Female</option>
+                </select></th>
+                <th><select name="Education" id="Education">
+                    <option value=1>university</option>
+                    <option value=2>graduate</option>
+                    <option value=3>high school</option>
+                    <option value=4>others</option>
+                </select></th>
+                <th><select name="Marital status" id="Marital_status">
+                    <option value=1>married</option>
+                    <option value=2>single</option>
+                    <option value=0>others</option>
+                </select></th>
+                <th><input type="number" value="25" name="Age"></th>
+                
+              </tr>
+          </table>
+          <br>
+        <label><h2>Number of months delayed on payment for respective months.</h2></label><br>
+        <table style="width:100%; background-color:darkcyan">
+            <tr>
+                <th class="header-label">September</th>
+                <th class="header-label">August</th>
+                <th class="header-label">July</th>
+                <th class="header-label">June</th>
+                <th class="header-label">May</th> 
+                <th class="header-label">April</th> 
+            </tr>
+            <tr>
+                <th><input type="number" value="0" name="rep_sep"></th>
+                <th><input type="number" value="0" name="rep_aug"></th>
+                <th><input type="number" value="0" name="rep_july"></th>
+                <th><input type="number" value="0" name="rep_june"></th>
+                <th><input type="number" value="0" name="rep_may"></th>
+                <th><input type="number" value="0" name="rep_apr"></th>
+            </tr>
+        </table>
+        <br>
+        <label><h2>Total bills of each month</h2></label><br>
+        <table style="width:100%">
+            <tr>
+                <th class="header-label">September</th>
+                <th class="header-label">August</th>
+                <th class="header-label">July</th>
+                <th class="header-label">June</th>
+                <th class="header-label">May</th> 
+                <th class="header-label">April</th> 
+            </tr>
+            <tr>
+                <th><input type="number" value="0" name="bs"></th>
+                <th><input type="number" value="0" name="ba"></th>
+                <th><input type="number" value="0" name="bjl"></th>
+                <th><input type="number" value="0" name="bju"></th>
+                <th><input type="number" value="0" name="bm"></th>
+                <th><input type="number" value="0" name="bap"></th>
+            </tr>
+        </table>
+        <br>
+        <label><h2>Total payment of each month</h2></label><br>
+        <table style="width:100%">
+            <tr>
+                <th class="header-label">September</th>
+                <th class="header-label">August</th>
+                <th class="header-label">July</th>
+                <th class="header-label">June</th>
+                <th class="header-label">May</th> 
+                <th class="header-label">April</th> 
+            </tr>
+            <tr>
+                <th><input type="number" value="0" name="sep"></th>
+                <th><input type="number" value="0" name="aug"></th>
+                <th><input type="number" value="0" name="july"></th>
+                <th><input type="number" value="0" name="june"></th>
+                <th><input type="number" value="0" name="may"></th>
+                <th><input type="number" value="0" name="apr"></th>
+            </tr>
+        </table>
+      
+        <h1 style="text-align: center;"><input type="submit" value="Predict"></h1><br><br>
 
-                </tr>
-            </table>
-            <br>
-            <br>
-            <h1 style="text-align: center;"><input type="submit" style="text-align: center;font-face: 'Comic Sans MS'; font-size: larger; color: pink; background-color: chocolate; border: 3pt ridge lightgrey" value=" Predict"></h1>
-            
-        </form>
-    </body>
+    </form>
+</body>
+</html>
